--- a/src/assets/scss/modules/typo.scss
+++ b/src/assets/scss/modules/typo.scss
@@ -16,15 +16,14 @@ UI Experience reading
     text-rendering: optimizeLegibility;
   }
 
-  h1 {
-    font-family: "Playfair Display", serif;
+  h1, .title {
     font-size: 48px;
     text-align: left;
     margin-bottom: 8px;
+    text-transform: uppercase;
   }
 
   h2 {
-    font-family: "Lato", sans-serif;
     font-size: 26px;
     font-weight: 700;
     padding: 0;
@@ -36,7 +35,6 @@ UI Experience reading
 
   p, i, a {
     margin-top: 21px;
-    font-family: "Lora", sans-serif;
     font-size: 21px;
     letter-spacing: -0.03px;
     line-height: 1.58;
@@ -47,7 +45,6 @@ UI Experience reading
   }
 
   blockquote {
-    font-family: "Playfair Display", serif;
     font-size: 30px;
     font-style: italic;
     letter-spacing: -0.36px;
@@ -72,7 +69,6 @@ UI Experience reading
 
   .fl {
     overflow-wrap: break-word;
-    font-family: "Playfair Display", serif;
     font-size: 60px;
     line-height: 60px;
     display: block;
@@ -82,7 +78,6 @@ UI Experience reading
   }
 
   .subtitle {
-    font-family: "Lato", sans-serif;
     color: rgba(0, 0, 0, 0.54);
     margin: 0 0 24px 0;
   }
